--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ button {
 }
 
 .bckgrnd {
-    max-width: 70%;
+    max-width: 400px;
     margin: 0 auto;
     padding: 20px;
     border-radius: 30px;
